--- a/package.json
+++ b/package.json
@@ -8,22 +8,30 @@
         "lint": "next lint",
         "build": "prisma generate && next build",
         "postinstall": "prisma generate"
-
     },
     "dependencies": {
         "@headlessui/react": "^2.2.0",
         "@heroicons/react": "^2.2.0",
+        "@hookform/resolvers": "^4.1.3",
         "@kinde-oss/kinde-auth-nextjs": "^2.5.3",
         "@prisma/client": "^6.4.1",
+        "@radix-ui/react-avatar": "^1.1.3",
+        "@radix-ui/react-dropdown-menu": "^2.1.6",
+        "@radix-ui/react-label": "^2.1.2",
         "@radix-ui/react-slot": "^1.1.2",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
+        "framer-motion": "^12.4.10",
         "lucide-react": "^0.477.0",
         "next": "15.2.1",
+        "next-themes": "^0.4.4",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
+        "react-hook-form": "^7.54.2",
+        "sonner": "^2.0.1",
         "tailwind-merge": "^3.0.2",
-        "tailwindcss-animate": "^1.0.7"
+        "tailwindcss-animate": "^1.0.7",
+        "zod": "^3.24.2"
     },
     "devDependencies": {
         "@eslint/eslintrc": "^3",
