--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
         "@kinde-oss/kinde-auth-nextjs": "^2.5.3",
         "@prisma/client": "^6.4.1",
         "@radix-ui/react-avatar": "^1.1.3",
+        "@radix-ui/react-dialog": "^1.1.6",
         "@radix-ui/react-dropdown-menu": "^2.1.6",
         "@radix-ui/react-label": "^2.1.2",
+        "@radix-ui/react-popover": "^1.1.6",
         "@radix-ui/react-slot": "^1.1.2",
         "@radix-ui/react-toggle": "^1.1.2",
         "@tiptap/extension-highlight": "^2.11.5",
@@ -30,16 +32,21 @@
         "@tiptap/pm": "^2.11.5",
         "@tiptap/react": "^2.11.5",
         "@tiptap/starter-kit": "^2.11.5",
+        "add": "^2.0.6",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
+        "cmdk": "^1.0.0",
         "framer-motion": "^12.4.10",
         "lucide-react": "^0.477.0",
         "next": "15.2.1",
         "next-themes": "^0.4.4",
+        "popover": "^2.4.1",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
         "react-hook-form": "^7.54.2",
+        "react-tag-input-component": "^2.0.2",
         "sanitize-html": "^2.14.0",
+        "shadcn": "^2.4.0-canary.12",
         "sonner": "^2.0.1",
         "tailwind-merge": "^3.0.2",
         "tailwindcss-animate": "^1.0.7",
