--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "@radix-ui/react-popover": "^1.1.6",
         "@radix-ui/react-slot": "^1.1.2",
         "@radix-ui/react-toggle": "^1.1.2",
+        "@tiptap/extension-color": "^2.11.5",
         "@tiptap/extension-highlight": "^2.11.5",
         "@tiptap/extension-image": "^2.11.5",
         "@tiptap/extension-link": "^2.11.5",
@@ -44,6 +45,7 @@
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
         "react-hook-form": "^7.54.2",
+        "react-syntax-highlighter": "^15.6.1",
         "react-tag-input-component": "^2.0.2",
         "sanitize-html": "^2.14.0",
         "shadcn": "^2.4.0-canary.12",
@@ -51,6 +53,7 @@
         "tailwind-merge": "^3.0.2",
         "tailwindcss-animate": "^1.0.7",
         "tiptap-extension-resize-image": "^1.2.1",
+        "vaul": "^1.1.2",
         "zod": "^3.24.2"
     },
     "devDependencies": {
@@ -59,6 +62,7 @@
         "@types/node": "^20",
         "@types/react": "^19",
         "@types/react-dom": "^19",
+        "@types/react-syntax-highlighter": "^15.5.13",
         "@types/sanitize-html": "^2.13.0",
         "eslint": "^9",
         "eslint-config-next": "15.2.1",
