--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "@tiptap/pm": "^2.11.5",
         "@tiptap/react": "^2.11.5",
         "@tiptap/starter-kit": "^2.11.5",
+        "@uploadthing/react": "^7.3.0",
         "add": "^2.0.6",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
@@ -53,6 +54,7 @@
         "tailwind-merge": "^3.0.2",
         "tailwindcss-animate": "^1.0.7",
         "tiptap-extension-resize-image": "^1.2.1",
+        "uploadthing": "^7.5.2",
         "vaul": "^1.1.2",
         "zod": "^3.24.2"
     },
