--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "@hookform/resolvers": "^4.1.3",
         "@kinde-oss/kinde-auth-nextjs": "^2.5.3",
         "@prisma/client": "^6.4.1",
+        "@radix-ui/react-aspect-ratio": "^1.1.2",
         "@radix-ui/react-avatar": "^1.1.3",
         "@radix-ui/react-dialog": "^1.1.6",
         "@radix-ui/react-dropdown-menu": "^2.1.6",
@@ -38,6 +39,8 @@
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "cmdk": "^1.0.0",
+        "embla-carousel-autoplay": "^8.5.2",
+        "embla-carousel-react": "^8.5.2",
         "framer-motion": "^12.4.10",
         "lucide-react": "^0.477.0",
         "next": "15.2.1",
