--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "@hookform/resolvers": "^4.1.3",
         "@kinde-oss/kinde-auth-nextjs": "^2.5.3",
         "@prisma/client": "^6.4.1",
+        "@radix-ui/react-accordion": "^1.2.3",
         "@radix-ui/react-aspect-ratio": "^1.1.2",
         "@radix-ui/react-avatar": "^1.1.3",
         "@radix-ui/react-dialog": "^1.1.6",
@@ -23,6 +24,7 @@
         "@radix-ui/react-popover": "^1.1.6",
         "@radix-ui/react-slot": "^1.1.2",
         "@radix-ui/react-toggle": "^1.1.2",
+        "@radix-ui/react-tooltip": "^1.1.8",
         "@tiptap/extension-color": "^2.11.5",
         "@tiptap/extension-highlight": "^2.11.5",
         "@tiptap/extension-image": "^2.11.5",
@@ -36,6 +38,7 @@
         "@tiptap/starter-kit": "^2.11.5",
         "@uploadthing/react": "^7.3.0",
         "add": "^2.0.6",
+        "axios": "^1.8.2",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "cmdk": "^1.0.0",
@@ -43,12 +46,14 @@
         "embla-carousel-react": "^8.5.2",
         "framer-motion": "^12.4.10",
         "lucide-react": "^0.477.0",
+        "motion": "^12.4.10",
         "next": "15.2.1",
         "next-themes": "^0.4.4",
         "popover": "^2.4.1",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
         "react-hook-form": "^7.54.2",
+        "react-scroll-parallax": "^3.4.5",
         "react-syntax-highlighter": "^15.6.1",
         "react-tag-input-component": "^2.0.2",
         "sanitize-html": "^2.14.0",
