--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
         "start": "next start",
         "lint": "next lint",
         "build": "prisma generate && next build",
-        "postinstall": "npm install --legacy-peer-deps && prisma generate"
+        "postinstall": "npm install --legacy-peer-deps && prisma generate",
+        "preinstall": "npx npm-force-resolutions"
+
     },
     "dependencies": {
         "@headlessui/react": "^2.2.0",
