--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
         "start": "next start",
         "lint": "next lint",
         "build": "prisma generate && next build",
-        "postinstall": "npm install --legacy-peer-deps && prisma generate",
-        "preinstall": "npx npm-force-resolutions"
-
+        "postinstall": "prisma generate"
     },
     "dependencies": {
         "@headlessui/react": "^2.2.0",
@@ -52,8 +50,8 @@
         "next": "15.2.1",
         "next-themes": "^0.4.4",
         "popover": "^2.4.1",
-        "react": "^19.0.0",
-        "react-dom": "^19.0.0",
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1",
         "react-hook-form": "^7.54.2",
         "react-scroll-parallax": "^3.4.5",
         "react-syntax-highlighter": "^15.6.1",
