--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
         "embla-carousel-autoplay": "^8.5.2",
         "embla-carousel-react": "^8.5.2",
         "framer-motion": "^12.4.10",
+        "jsdom": "^26.0.0",
         "lucide-react": "^0.477.0",
         "motion": "^12.4.10",
         "next": "15.2.1",
@@ -71,6 +72,7 @@
     "devDependencies": {
         "@eslint/eslintrc": "^3",
         "@tailwindcss/postcss": "^4",
+        "@types/jsdom": "^21.1.7",
         "@types/node": "^20",
         "@types/react": "^19",
         "@types/react-dom": "^19",
